Support of Content-ID attachment header

--- a/i18n/ca.json
+++ b/i18n/ca.json
@@ -293,6 +293,7 @@
     "media.upload": "Carrega",
     "media.uploadHelp": "Fes clic o arrossega una o més imatges aquí",
     "media.uploadImage": "Carrega la imatge",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Totes les campanayes",
     "menu.allLists": "Totes les llistes",
     "menu.allSubscribers": "Tots els subscriptors",
