--- a/i18n/cs-cz.json
+++ b/i18n/cs-cz.json
@@ -293,6 +293,7 @@
     "media.upload": "Odeslat",
     "media.uploadHelp": "Klepněte nebo přetáhněte jeden nebo více obrázků sem",
     "media.uploadImage": "Odeslat obrázek",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Všechny kampaně",
     "menu.allLists": "Všechny seznamy",
     "menu.allSubscribers": "Všichni odběratelé",
