--- a/i18n/cy.json
+++ b/i18n/cy.json
@@ -293,6 +293,7 @@
     "media.upload": "Llwytho i fyny",
     "media.uploadHelp": "Clicio neu lusgo un llun neu fwy yma",
     "media.uploadImage": "Llwytho llun i fyny",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Pob ymgyrch",
     "menu.allLists": "Pob rhestr",
     "menu.allSubscribers": "Pob tanysgrifiwr",
