--- a/i18n/da.json
+++ b/i18n/da.json
@@ -293,6 +293,7 @@
     "media.upload": "Upload",
     "media.uploadHelp": "Klik eller træk et eller flere billeder hertil",
     "media.uploadImage": "Upload billede",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Alle kampagner",
     "menu.allLists": "Alle lister",
     "menu.allSubscribers": "Alle abonnenter",
