--- a/i18n/de.json
+++ b/i18n/de.json
@@ -293,6 +293,7 @@
     "media.upload": "Hochladen",
     "media.uploadHelp": "Klicke oder ziehe ein oder mehrere Bilder hierhin",
     "media.uploadImage": "Bilder Hochladen",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Alle Kampagnen",
     "menu.allLists": "Alle Listen",
     "menu.allSubscribers": "Alle Abonnenten",
