--- a/i18n/el.json
+++ b/i18n/el.json
@@ -293,6 +293,7 @@
     "media.upload": "Μεταφόρτωση",
     "media.uploadHelp": "Κάντε κλικ ή σύρετε μία ή περισσότερες εικόνες εδώ",
     "media.uploadImage": "Μεταφόρτωση εικόνας",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Όλες οι εκστρατείες",
     "menu.allLists": "Όλες οι λίστες",
     "menu.allSubscribers": "Όλοι οι συνδρομητές",
