--- a/i18n/fi.json
+++ b/i18n/fi.json
@@ -294,6 +294,7 @@
     "media.upload": "Lataa",
     "media.uploadHelp": "Klikkaa tai raahaa tähän yksi tai useampi kuva",
     "media.uploadImage": "Lataa kuva",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Kaikki kampanjat",
     "menu.allLists": "Kaikki listat",
     "menu.allSubscribers": "Kaikki tilaajat",
