--- a/i18n/he.json
+++ b/i18n/he.json
@@ -293,6 +293,7 @@
     "media.upload": "העלאה",
     "media.uploadHelp": "לחץ או גרור לכאן תמונות",
     "media.uploadImage": "העלה תמונה",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "כל הקמפיינים",
     "menu.allLists": "כל הרשימות",
     "menu.allSubscribers": "כל הרשומים",
