--- a/i18n/it.json
+++ b/i18n/it.json
@@ -293,6 +293,7 @@
     "media.upload": "Caricare",
     "media.uploadHelp": "Seleziona o trascina qui una o più immagini",
     "media.uploadImage": "Caricare l'immagine",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Tutte le campagne",
     "menu.allLists": "Tutte le liste",
     "menu.allSubscribers": "Tutti gli iscritti",
