--- a/i18n/ml.json
+++ b/i18n/ml.json
@@ -293,6 +293,7 @@
     "media.upload": "അപ്ലോഡ്",
     "media.uploadHelp": "ഒന്നോ അതിലധികമോ ചിത്രങ്ങൾ വലിച്ചിട്ടോ അമർത്തിയോ ഇവിടെ കൊണ്ടുവരിക",
     "media.uploadImage": "ചിത്രം അപ്ലോഡ് ചെയ്യുക",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "എല്ലാ ക്യാമ്പേയ്നുകളും",
     "menu.allLists": "എല്ലാ ലിസ്റ്റുകളും",
     "menu.allSubscribers": "എല്ലാ വരിക്കാരും",
