--- a/i18n/nl.json
+++ b/i18n/nl.json
@@ -293,6 +293,7 @@
     "media.upload": "Uploaden",
     "media.uploadHelp": "Klik of sleep een of meer afbeeldingen naar hier",
     "media.uploadImage": "Afbeelding uploaden",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Alle campagnes",
     "menu.allLists": "Alle lijsten",
     "menu.allSubscribers": "Alle abonnees",
