--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -293,6 +293,7 @@
     "media.upload": "Wysyłanie",
     "media.uploadHelp": "Kliknij lub przeciągnij jeden lub więcej plików tutaj",
     "media.uploadImage": "Wyślij obraz",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Wszystkie kampanie",
     "menu.allLists": "Wszystkie listy",
     "menu.allSubscribers": "Wszyscy subskrybenci",
