--- a/i18n/pt-BR.json
+++ b/i18n/pt-BR.json
@@ -293,6 +293,7 @@
     "media.upload": "Enviar arquivo",
     "media.uploadHelp": "Clique ou arraste uma ou mais imagens aqui",
     "media.uploadImage": "Enviar Imagem",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Todas as campanhas",
     "menu.allLists": "Todas as listas",
     "menu.allSubscribers": "Todos os inscritos",
