--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -293,6 +293,7 @@
     "media.upload": "Carregar",
     "media.uploadHelp": "Clica ou arrasta uma ou mais imagens aqui",
     "media.uploadImage": "Enviar imagens",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Todas as campanhas",
     "menu.allLists": "Todas as listas",
     "menu.allSubscribers": "Todos os subscritores",
