--- a/i18n/ro.json
+++ b/i18n/ro.json
@@ -294,6 +294,7 @@
     "media.upload": "Încarcă",
     "media.uploadHelp": "Click sau trage una sau mai multe imagini aici",
     "media.uploadImage": "Încarcă imaginea",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Toate campaniile",
     "menu.allLists": "Toate listele",
     "menu.allSubscribers": "Toți abonații",
