--- a/i18n/se.json
+++ b/i18n/se.json
@@ -293,6 +293,7 @@
     "media.upload": "Ladda upp",
     "media.uploadHelp": "Klicka eller dra hit en eller flera bilder",
     "media.uploadImage": "Ladda upp bild",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Alla kampanjer",
     "menu.allLists": "Alla listor",
     "menu.allSubscribers": "Alla prenumeranter",
