--- a/i18n/sk.json
+++ b/i18n/sk.json
@@ -293,6 +293,7 @@
     "media.upload": "Odoslať",
     "media.uploadHelp": "Klikniten alebo presuňte jeden alebo viac obrázkov sem",
     "media.uploadImage": "Odoslač obrázok",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Všetky kampane",
     "menu.allLists": "Všetky zoznamy",
     "menu.allSubscribers": "Všetci odberatelia",
