--- a/i18n/sl.json
+++ b/i18n/sl.json
@@ -293,6 +293,7 @@
     "media.upload": "Naloži",
     "media.uploadHelp": "Kliknite ali povlecite eno ali več slik sem",
     "media.uploadImage": "Naloži sliko",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Vse akcije",
     "menu.allLists": "Vsi seznami",
     "menu.allSubscribers": "Vsi naročniki",
