--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -294,6 +294,7 @@
     "media.upload": "Yükleme",
     "media.uploadHelp": "Bir veya daha fazla resmi buraya bırak veya tıkla",
     "media.uploadImage": "Resim yükle",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Tüm kampanyalar",
     "menu.allLists": "Tüm listeler",
     "menu.allSubscribers": "Tüm üyeler",
