--- a/i18n/uk.json
+++ b/i18n/uk.json
@@ -293,6 +293,7 @@
     "media.upload": "Вивантажити",
     "media.uploadHelp": "Натисніть тут або посуньте сюди принаймні одну картинку",
     "media.uploadImage": "Вивантажити картинку",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Усі кампанії",
     "menu.allLists": "Усі розсилки",
     "menu.allSubscribers": "Усі підписни_ці",
