--- a/i18n/vi.json
+++ b/i18n/vi.json
@@ -294,6 +294,7 @@
     "media.upload": "Tải lên",
     "media.uploadHelp": "Nhấp hoặc kéo một hoặc nhiều hình ảnh vào đây",
     "media.uploadImage": "Tải hình ảnh lên",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Tất cả chiến dịch",
     "menu.allLists": "Tất cả danh sách",
     "menu.allSubscribers": "Tất cả người đăng ký",
