--- a/i18n/zh-TW.json
+++ b/i18n/zh-TW.json
@@ -294,6 +294,7 @@
     "media.upload": "上傳",
     "media.uploadHelp": "在此處點擊或拖曳一張或多張圖片",
     "media.uploadImage": "上傳圖片",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "所有廣告",
     "menu.allLists": "所有清單",
     "menu.allSubscribers": "所有訂閱者",
