--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -294,6 +294,7 @@
     "media.upload": "Importer",
     "media.uploadHelp": "Cliquez ou glissez-déposez ici une ou plusieurs image(s)",
     "media.uploadImage": "Importer une image",
+    "media.contentID": "Content-ID",
     "menu.allCampaigns": "Toutes les campagnes",
     "menu.allLists": "Toutes les listes",
     "menu.allSubscribers": "Tou·tes les abonné·es",
